--- a/.config/i3/config
+++ b/.config/i3/config
@@ -5,7 +5,9 @@ set $mod Mod4
 ################################################################
 
 # Terminal : $mod + Return
-bindsym $mod+Return exec gnome-terminal
+bindsym $mod+Return exec kitty
+
+bindsym $mod+` exec code
 
 # Firefox : $mod + w
 bindsym $mod+w exec firefox
@@ -14,21 +16,25 @@ bindsym $mod+w exec firefox
 ################################################################
 
 # dmenu : $mod + d
-bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+d exec --no-startup-id rofi -modi drun -show drun -show-icons
 
 # i3 Bindings ##################################################
 ################################################################
 
 
-# kill focused window : $mod + Shift + q
-bindsym $mod+Shift+q kill
+# kill focused window : $mod + q
+bindsym $mod+q kill
 
 # change focus : $mod + {direction}
-bindsym $mod+h focus left
-bindsym $mod+j focus down
-bindsym $mod+k focus up
-bindsym $mod+l focus right
+#bindsym $mod+h focus left
+#bindsym $mod+j focus down
+#bindsym $mod+k focus up
+#bindsym $mod+l focus right
 # TODO: add $mod+arrows fallback
+bindsym $mod+h exec "~/.config/i3/move-cursor-window-center.sh focus left"
+bindsym $mod+j exec "~/.config/i3/move-cursor-window-center.sh focus down"
+bindsym $mod+k exec "~/.config/i3/move-cursor-window-center.sh focus up"
+bindsym $mod+l exec "~/.config/i3/move-cursor-window-center.sh focus right"
 
 # move focused window : $mod + Shift + {direction}
 bindsym $mod+Shift+h move left
@@ -78,9 +84,12 @@ bindsym $mod+Shift+Escape exec "i3-nagbar -t warning -m 'You pressed the exit sh
 font pango: Source Code Pro semibold 18px
 
 # border and gaps
-default_border pixel 5 
+default_border pixel 3 
 gaps inner 10
 gaps outer 5
+smart_gaps on
+smart_borders on
+border_radius 3
 
 # Define workspaces
 set $ws1 "1"
@@ -127,15 +136,19 @@ bindsym $mod+Control+l resize grow width 15 px or 10 ppt
 # Drag floating windows with mouse + $mod
 floating_modifier $mod
 
+# class                 border  bground text    indicator child_border
+client.focused	        #CCCCCC #CCCCCC #333333 #9648cd
 
 # Bar ##########################################################
 ################################################################
 bar {
         status_command i3status
-	      font pango: Source Code Pro 30px	
+	      font pango: Source Code Pro 15px	
 	      position top
 	colors {
 		background #333333
+		focused_workspace #333333 #333333 #9648cd
+		inactive_workspace #333333 #333333 #CCCCCC
 		statusline #CCCCCC
 	}
 }
@@ -145,4 +158,9 @@ exec --no-startup-id /usr/lib/gnome-settings-daemon/gsd-xsettings
 exec_always --no-startup-id gnome-power-manager
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id gnome-flashback
+
+# startup
+exec ~/.config/i3/elecom-rebind.sh &
+exec --no-startup-id ~/.config/i3/elecom-scroll.sh &
+exec --no-startup-id ~/.config/i3/set-key-repeat.sh &
 
