--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,7 +1,7 @@
-include themes/Solarized_Darcula.conf
-font_family Fira Code
+include themes/Solarized_Dark_-_Patched.conf
+font_family DejaVu LGC Sans Code
 font_size 14.0
-window_margin_width 5
 allow_remote_control yes
 shell fish
-
+wheel_scroll_multiplier 1
+mouse_hide_wait 1.5
