--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,7 +1,11 @@
-include themes/Solarized_Dark_-_Patched.conf
 font_family DejaVu LGC Sans Code
 font_size 14.0
 allow_remote_control yes
 shell fish
 wheel_scroll_multiplier 1
 mouse_hide_wait 1.5
+map ctrl+shift+j neighboring_window down
+map ctrl+shift+k neighboring_window up
+map ctrl+shift+h neighboring_window left
+map ctrl+shift+l neighboring_window right
+with_cwd
